# Fable-Harness

./: .gitignore  .yarnrc.example.yml  CNAME  LICENSE  README.md  SKILL.md  package.json  pyproject.toml
.github/workflows/: publish-package.yml
agents/: openai.yaml
scripts/: benchmark_readme.py  install_fable_harness.py  test_install_fable_harness.py  test_package_publish_workflow.py
src/fable_harness/: __init__.py  __main__.py  cli.py  installer.py
