[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fable-harness"
version = "0.3.0"
description = "Give AI agents project-local memory, planning, verification, and rollback for traceable coding work."
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
authors = [
  { name = "AAO-SH" }
]
keywords = [
  "ai-agents",
  "agent-harness",
  "codex",
  "claude-code",
  "ai-workflows",
  "decision-loop",
  "agent-memory",
  "rag",
  "knowledge-graph",
  "code-graph",
  "subagents",
  "rollback",
  "tdd",
  "workflow-automation",
  "llm-tools"
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Topic :: Software Development :: Quality Assurance",
  "Topic :: Software Development :: Testing"
]

[project.urls]
Homepage = "https://fable.aao.sh"
Repository = "https://github.com/aao-sh/fable-harness"
Issues = "https://github.com/aao-sh/fable-harness/issues"

[project.scripts]
fable-harness = "fable_harness.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
fable_harness = ["py.typed"]
